samples/_failures_safe/1761636707_3c6d2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b378392.c: In function ‘main’:
./samples/SAFE/__tmp_3b378392.c:176:9: error: expected declaration or statement at end of input
  176 |         if (k >= token_count) break;
      |         ^~
./samples/SAFE/__tmp_3b378392.c:176:9: error: expected declaration or statement at end of input
